--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.3.4"
+    "astro": "^3.3.4",
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-astro": "^0.31.0"
   }
 }
