--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "astro": "^3.3.4",
+    "normalize.css": "^8.0.1",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
   },
