--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^3.0.2",
     "astro": "^3.3.4",
     "gsap": "^3.12.4",
     "normalize.css": "^8.0.1",
+    "preact": "^10.19.3",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
   },
