--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "normalize.css": "^8.0.1",
     "preact": "^10.19.3",
     "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.3"
+    "prettier-plugin-astro": "^0.12.3",
+    "resend": "^2.1.0"
   },
   "devDependencies": {
+    "@types/node": "^20.10.6",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.31.0"
